# Volatility_Analyzer

./: .clinerules  .eslintignore  .eslintrc.cjs  .gitignore  ACCORDION_REFACTOR.md  AEDCNH_1 Min_Bid_2025.11.01_2025.11.06.csv  AUDIT_FINAL_RESUME.md  AUDIT_P1_P2_FINAL.md  Au début de chaque conversation.txt  ESLINT_CONFIGURATION.md  EVENT_TRANSLATIONS.md  IANALYSE_MODULE_ANALYSIS.md  IMPLEMENTATION_15MIN.md  Makefile  README.md  SCALPING_15MIN_COMPLETE.md  SYSTEM_PROMPT.md  TECHNICAL_REFERENCE_15MIN.md  VERIFICATION_VOLATILITY_RELIABILITY.md  VOLATILITY_CALCULATION_AUDIT.md  WARNINGS_ANALYSIS.md  metrics2.md  package.json  projet.md  task.md  task2.md  test_insert.sh  test_movement_quality.sh  traduction.txt  tsconfig.json  vite.config.ts
src-tauri/: .clinerules  .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: README.md
src-tauri/migrations/2025-11-08-124405-0000_create_event_metrics/: down.sql  up.sql
src-tauri/migrations/2025-11-14-095844-0000_add_cascade_delete_calendar_events/: down.sql  up.sql
src-tauri/migrations/2025-11-16-000000-0000_create_event_movement_quality/: down.sql  up.sql
src-tauri/migrations/2025-11-18-104910-0000_create_volatility_duration_table/: down.sql  up.sql
src-tauri/migrations/2025-12-02-100000-0000_add_peak_delay_to_stats/: down.sql  up.sql
src-tauri/migrations/2025-12-02-101000-0000_create_entry_timing_analysis/: down.sql  up.sql
src-tauri/migrations/2025-12-02-102000-0000_create_directional_bias_analysis/: down.sql  up.sql
src-tauri/migrations/2025-12-02-103000-0000_add_peak_delay_history_to_events/: down.sql  up.sql
src-tauri/migrations/2025-12-04-120000-0000_create_volatility_profiles/: down.sql  up.sql
src-tauri/migrations/2025-12-11-000001-add-hidden-to-conversions/: down.sql  up.sql
src-tauri/src/: lib.rs  lib.rs.bk  schema.rs  schema.rs.bk
src-tauri/src/commands/: archive_commands.rs  backtest.rs  calendar_commands.rs  calendar_db_helper.rs  calendar_import_commands.rs  calendar_parser.rs  candle_db_writer.rs  candle_helpers.rs  candle_index_commands.rs  cleanup_commands.rs  deletion_commands.rs  (+19 more)
src-tauri/tests/: integration_test.rs
(+493 files in other folders)
