[package]
name = "analyses-historiques-volatility"
version = "0.1.0"
description = "Analyseur de volatilité Forex pour scalping - Tauri 2.0 + Vue"
authors = ["Rono40230"]
edition = "2021"

[lib]
name = "tauri_app_lib"
#crate-type = ["staticlib", "cdylib", "rlib"]
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2.0
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", default-features = false, features = ["sqlite"] }

# Calculs statistiques (PRIORITÉ 1 - Performance)
polars = { version = "0.45", features = ["lazy", "temporal", "csv"] }
ndarray = "0.16"
statrs = "0.17"


# Base de données SQLite
diesel = { version = "2.2", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = "2.2"
rusqlite = { version = "0.32", features = [] }

# Explicit sqlx pin to avoid pulling mysql feature set transitively
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }

# Validation des entrées
validator = { version = "0.19", features = ["derive"] }

# Sérialisation JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Gestion d'erreurs
thiserror = "1.0"
anyhow = "1.0"

# Dates et parsing
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"

# Lecture Excel et chemins système (pour import calendrier)
calamine = { version = "0.26", features = ["dates"] }
dirs = "5.0"

# HTTP client pour scraping
reqwest = { version = "0.12", features = ["json", "blocking"] }
scraper = "0.20"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parallélisme pour optimisations
rayon = "1.10"

# PDF generation
printpdf = "0.7"
lopdf = "0.32"

[dev-dependencies]
mockall = "0.13"
tempfile = "3.8"

[profile.dev]
opt-level = 0
debug = 0
strip = "debuginfo"
incremental = false
lto = false

[profile.release]
debug = 0
strip = true
lto = false
codegen-units = 16
